# Colosseum

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  config_loader.py  eval.py  graph.py  llm_clients.py  main.py  nodes.py  pyproject.toml  schemas.py  utils.py
backend/.deepeval/: .deepeval_telemetry.txt
backend/app/: config_loader.py  main.py  utils.py
backend/app/db/: crud.py  database.py  models.py
backend/app/lang_graph/: graph.py  nodes.py
backend/app/llm/: eval.py  llm_clients.py  summary.py
backend/arena_graph/: __init__.py  graph.py  nodes.py
backend/db/: crud.py  database.py
backend/lang_graph/: nodes.py
backend/langgraph/: graph.py  nodes.py
backend/llm/: __init__.py  eval.py  llm_clients.py  summary.py
config/: config.py  config.yaml
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.ts
frontend/src/: App.css  App.jsx  App.tsx  base.css  main.jsx  main.tsx  styles.css
frontend/src/components/: ChatArea.css  ChatArea.jsx  ChatArea.tsx  InputBar.css  InputBar.tsx  Sidebar.css  Sidebar.jsx  Sidebar.tsx  inputBar.jsx
frontend/src/services/: chatService.js  chatService.ts
frontend/src/types/: chat.ts
