[project]
name = "multi-llm-mvp-backend"
version = "0.1.0"
description = "FastAPI backend for Multi LLM MVP"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "httpx==0.28.1",
    "pydantic==2.11.7",
    "python-dotenv==1.1.1",
]